--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,4 @@
 /* general */
-.base-link {
-
-}
 
 .overlay {
     position: absolute;
@@ -36,18 +33,20 @@ header {
     font-size: 18px;
 }
 
-.header-menu-list {
+.header-links-list {
     width: 388px;
     display: flex;
     justify-content: space-between;
     flex-direction: row
 }
 
-.header-menu-list-item {
+.header-links-list-item {
     list-style-type: circle;
 }
-
-.header-menu-list-item-active {
+.header-links-list-item-no-bullit{
+    list-style-type: none; 
+}
+.header-links-list-item-active {
     list-style-type: none;
 }
 
@@ -69,7 +68,7 @@ header {
 }
 
 /* header-contacts*/
-.header-contacts {
+.address {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -78,7 +77,7 @@ header {
     font-size: 18px;
 }
 
-.header-contacts > div {
+.header-address {
     width: 240px;
     height: 97px;
     display: flex;
